--- a/deploy/base/master.yaml
+++ b/deploy/base/master.yaml
@@ -1,6 +1,6 @@
 Description: >
 
-    This template deploys base resources for OpenpayWeb
+    This template deploys base resources for OpenpayWebUK
 
 Resources:
 
